--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravelcollective/html": "^5.2.0"
+        "laravelcollective/html": "^5.2.0",
+        "rych/random": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -18,7 +19,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "vendor/rych/random/Rych/Random"
         ],
         "psr-4": {
             "App\\": "app/"
